Pre-Release 1.6.0
= Fixed Webhook Messages not sending.
= Fixed Logback.
= Finished Twitter Notifier.